--- a/dicee.html
+++ b/dicee.html
@@ -23,7 +23,9 @@
       </div>
 
     </div>
-    <button onclick=handleClick() class="button"> Click me</button>
+    <div class="center">    
+      <button onclick=handleClick() class="button"> Click me</button>
+    </div>
     <script src="./index.js"></script>
   </body>
 
