--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="container">
-      <h1>Random Dice</h1>
+      <h1>Dice Game</h1>
 
       <div class="dice">
         <p>Player 1</p>
